<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="eventHandler"
            type="jibreelpowell.com.redbluegreen.MainActivityEventHandler"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <ImageView
            android:id="@+id/canvas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            tools:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/red_value"/>

                <EditText
                    android:id="@+id/red_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blue_value"
                    />

                <EditText
                    android:id="@+id/blue_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/green_value"
                    />

                <EditText
                    android:id="@+id/green_value"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/show_me_the_color"
            android:onClick="@{() -> eventHandler.onClick()}"
            />
    </LinearLayout>
</layout>